# O12_Path_tracing

./: .gitignore  CMakeLists.txt  README.md
include/: background.hpp  color.hpp  elements.hpp  image.hpp  intersection.hpp  light.hpp  material.hpp  ray.hpp  scene.hpp  screen.hpp  vec3.hpp
src/: background.cpp  color.cpp  elements.cpp  image.cpp  light.cpp  main.cpp  ray.cpp  scene.cpp  screen.cpp  vec3.cpp
